--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -7,7 +7,7 @@ rounded-corners-exclude = [
   #"window_type = 'normal'",
     "class_g = 'Evince'",
     "class_g = 'SpeedCrunch'",
-    "class_g = 'Emacs'",
+    "class_g = 'maim'",
     "class_g = 'main'",
     "class_g = 'Polybar'",
     "class_g = 'i3-frame'",
