added fusuma, and made some minor tweaks

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -186,6 +186,7 @@ bindsym $mod+r mode "resize"
 #Polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh --colorblocks
 
+
 #Lock
 bindsym mod1+l exec betterlockscreen -l 
 
@@ -264,3 +265,6 @@ client.unfocused        #0d1010 #212121 #d9d9d9 #424242 #063340
 client.focused          #d9d9d9 #cecece #000000 #d9d9d9 #d9d9d9
 
 #d9d9d9
+
+bindsym $mod+shift+p workspace prev
+bindsym $mod+shift+g workspace next
