--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -266,5 +266,5 @@ client.focused          #d9d9d9 #cecece #000000 #d9d9d9 #d9d9d9
 
 #d9d9d9
 
-bindsym $mod+shift+p workspace prev
-bindsym $mod+shift+g workspace next
+
+exec --no-startup-id udiskie -ans &
