--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -2,13 +2,13 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 10.0;
+#corner-radius = 10.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
 #    "class_g = 'Evince'",
     "class_g = 'SpeedCrunch'",
-    "class_g = 'maim'",
-    "class_g = 'Emacs'",
+    "class_g = 'slop'",
+    "class_g = 'scrot'",
     "class_g = 'Polybar'",
     "class_g = 'i3-frame'",
     "class_g = 'Zathura'",
@@ -58,12 +58,12 @@ size-transition = true
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-shadow = false;
+shadow = true;
 #shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 25;
+shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = 1;
@@ -74,8 +74,8 @@ shadow-offset-x = -25;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -30;
-corner_radius = 4;
+shadow-offset-y = -25;
+corner_radius = 10;
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
@@ -115,7 +115,7 @@ shadow-exclude = [
 #  "name = 'Notification'",
   "class_g = 'i3-frame'",
   "class_g = 'polybar'",
-  "class_g = 'Cairo-clock'",
+  "class_g = 'slop'",
 #  "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -310,7 +310,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 60
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -489,7 +489,7 @@ log-level = "warn";
 wintypes:
 {
 	tooltip = { fade = true; shadow = false; focus = false;	};
-	normal = { shadow = false; };
+	normal = { shadow = true; };
 	dock = { shadow = false; };
 	dnd = { shadow = false; };
 	popup_menu = { shadow = false; focus = true; opacity = 0.90; };
