--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-#corner-radius = 10.0;
+#corner-radius = 15.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
 #    "class_g = 'Evince'",
@@ -15,7 +15,7 @@ rounded-corners-exclude = [
 #    "class_g = 'Code'",
 #    "class_g = 'firefox'"
     ];
-round-borders = 1;
+#round-borders = 1;
 round-borders-exclude = [
 "class_g = 'Alacritty'",
 ];
@@ -58,7 +58,7 @@ size-transition = true
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-shadow = true;
+#shadow = true;
 #shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
@@ -249,6 +249,8 @@ blur: {
     background-fixed = true;
 }
 
+
+  
 # Specify the blur convolution kernel, with the following format:
 # example:
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
@@ -275,6 +277,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
+experimental-backends = true;
 backend = "glx";
 #backend = "xrender";
 
@@ -310,7 +313,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 60
+refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
