--- a/polybar/.config/polybar/colorblocks/modules.ini
+++ b/polybar/.config/polybar/colorblocks/modules.ini
@@ -903,7 +903,7 @@ type = internal/pulseaudio
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
 #sink = alsa_output.pci-0000_03_00.6.analog-stereo
-sink = alsa_output.pci-0000_03_00.6.HiFi__hw_Generic_1__sink
+sink = alsa_output.pci-0000_03_00.6.HiFi___ucm0003.hw_Generic_1__sink
 ; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
 ; Default: true
 use-ui-max = false
