--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-#corner-radius = 15.0;
+corner-radius = 15.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
 #    "class_g = 'Evince'",
@@ -12,7 +12,7 @@ rounded-corners-exclude = [
     "class_g = 'Polybar'",
     "class_g = 'i3-frame'",
     "class_g = 'Zathura'",
-#    "class_g = 'Code'",
+    "class_g = 'awesome'",
 #    "class_g = 'firefox'"
     ];
 #round-borders = 1;
@@ -492,7 +492,7 @@ log-level = "warn";
 wintypes:
 {
 	tooltip = { fade = true; shadow = false; focus = false;	};
-	normal = { shadow = true; };
+	normal = { shadow = false; };
 	dock = { shadow = false; };
 	dnd = { shadow = false; };
 	popup_menu = { shadow = false; focus = true; opacity = 0.90; };
